--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -6,12 +6,9 @@
 nav {
   background-color: #222222;
   color: #fff;
-  width: 250px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  min-height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
   transition: width 0.3s ease;
   padding: 20px;
 }
@@ -106,7 +103,7 @@ a {
 }
 
 /* RESPONSIVENESS CHUCHU */
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 991px) {
   nav {
     width: 100%;
     height: auto;
